--- a/forms/html5.html
+++ b/forms/html5.html
@@ -24,8 +24,46 @@
   <main>
     <h2>Registrierung</h2>
 
-    <p>&Uuml;bernehmen Sie das Formular von Registrierung (register.html) und 
-       bauen Sie das Formular in HTML5 um.</p>
+    <form action="https://dublin.zhaw.ch/~bkrt/demos/showpostdata.php" method="post">
+      <fieldset>
+          <legend>Logindaten</legend>
+          <label for="login">Benutzername:</label>
+          <input type="text" id="login" name="login" autofocus="autofocus"/>
+          <label for="password">Passwort:</label>
+          <input type="password" id="password" name="password"required/>
+          <label for="pwdconfirm">Best&auml;tigen:</label>
+          <input type="password" id="pwdconfirm" name="pwdconfirm" required/>
+      </fieldset>
+      <fieldset>
+          <legend>Benutzerdaten</legend>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+          <label for="email">E-Mail:</label>
+          <input type="email" id="email" name="email" required placeholder="user@host.com"/>
+          <label for="birthday">Geburtstag:</label>
+          <input type="date" id="birthday" name="birthday" />
+          <label for="cnt">Anz. Teilnehmer</label>
+          <input type="number" id="cnt" name="cnt" required/>
+          <input type="hidden" id="hidden_filed" name="why_doe" value="This is some hidden value" />
+          <fieldset class="radiocheckgroup">
+            <legend><span>Geschlecht:</span></legend>
+            <input type="radio" name="gender" id="gender_m" value="male"/> Männlich <br />
+            <input type="radio" name="gender" id="gender_f" value="female"/> Weiblich <br />
+            <input type="radio" name="gender" id="gender_fl" value="fluid"/> Genderfluid <br />
+          </fieldset>
+          <label for="courses">Kurse: </label>
+          <select id="courses" name="kurse[]" multiple required>
+            <option value="cpp">C++ für Fortgeschrittene</option>
+            <option value="stricken">Stricken für Hacker</option>
+            <option value="fbtut">How to facebook</option>
+            <option value="pod">Podcasting for dummies</option>
+          </select>
+          <label for="comment">Kommentar:</label>
+          <textarea id="comment" name="comment" rows="3" cols="30"></textarea>
+          <label for="submit"></label>
+          <input type="submit" id="submit" name="submit" value="Registrieren" />
+      </fieldset>
+  </form>
     
   </main>
 
