--- a/flower_blog/index.html
+++ b/flower_blog/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta charset="UTF-8">
 	<title>The Flower Blog</title>
+	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
 	<header>
 		<h1>The Flower Blog</h1>
 	</header>
@@ -23,10 +23,9 @@
 			<h2>Do you love flowers as much as we do?</h2>
 		</header>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
-		<img src="images/intro_flower.png" alt="Flower" />
 	</section>
 	<div id="content">
-		<div id="mainContent">
+		<main>
 			<section>
 				<article class="blogPost">
 					<header>
@@ -84,7 +83,7 @@
 				</p>
 				<p><input type="submit" value="Post comment" /></p>
 			</form>
-		</div>
+		</main>
 		<aside>
 			<section>
 				<header>
